Initial commit: Add course template with iframe height adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -2810,23 +2810,17 @@ html {
 [data-v-8b938be5].grid-embed_iframe,
 .grid-embed_iframe {
     width: 100% !important;
-    height: 100vh !important;
     min-height: 800px !important;
-    border: none;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-    display: block;
+    border: none !important;
+    overflow: auto !important;
 }
 
 [data-v-8b938be5].grid-embed,
 div[class*="grid-embed"] {
     width: 100% !important;
-    height: 100vh !important;
     min-height: 800px !important;
-    overflow: visible;
-    position: relative;
-    display: block;
+    overflow: visible !important;
+    position: relative !important;
 }
 
 
@@ -2835,6 +2829,5 @@ div[class*="grid-embed"] {
 div[data-v-8b938be5][class*="layout-element_component--GridEmbed"] {
     height: auto !important;
     min-height: 800px !important;
-    overflow: visible;
-    position: relative;
+    overflow: visible !important;
 }
